--- a/More-Qubit Pro v3.0/main.ipynb
+++ b/More-Qubit Pro v3.0/main.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,16 +371,18 @@
     "    '''Given the Pauli decomposition of the Hamiltonian of interest and measurement dataset\n",
     "       return the expectaion value of the Hamiltonian (with confidence interval)\n",
     "    '''\n",
+    "    E_min = 0\n",
+    "    E_max = 0\n",
     "    error_rate = 1 - confidence_level\n",
     "    z = norm.ppf(1 - error_rate / 2)  # Quantile of the input confidence level for binomial distribution\n",
-    "\n",
+    "    \n",
     "    for pauli_basis_str in H_global_list:\n",
     "        exp, var = exp_var_calculator(measurement_dataset, pauli_basis_str)\n",
     "        num_meas_sub = num_meas_sub_calculator(measurement_dataset, pauli_basis_str)\n",
     "        p_value = 0.5 * (1 + exp)\n",
     "        sigma = z * ((p_value * (1 - p_value) / num_meas_sub) ** 0.5)\n",
-    "        E_min = exp - 2 * sigma\n",
-    "        E_max = exp + 2 * sigma\n",
+    "        E_min = E_min + exp - 2*sigma\n",
+    "        E_max = E_max + exp + 2*sigma\n",
     "\n",
     "    return E_min, E_max\n",
     "\n",
@@ -770,7 +772,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "N = 4 # Number of qubits of the entire system\n",
+    "N = 3 # Number of qubits of the entire system\n",
     "M = 2 # Number of qubits of subsystems\n",
     "G = 3 # Number of qubits of partial global system (C1)\n",
     "K = N-M+1 # Number of subsystems\n",
@@ -787,9 +789,9 @@
     "\n",
     "ground_state_energy, ground_state_dm = ground_state(H_global)\n",
     "q_state = DensityMatrix(ground_state_dm)\n",
-    "N_meas_list = N_meas_list_func(1000, 100000, 6)\n",
+    "N_meas_list = N_meas_list_func(1000, 500000, 20)\n",
     "threshold = 0.2\n",
-    "num_of_shot = 20\n",
+    "num_of_shot = 100\n",
     "\n",
     "data = get_SDP_dataset(num_of_shot=num_of_shot,\n",
     "                       N_meas_list=N_meas_list,\n",
@@ -801,7 +803,7 @@
     "E_mean, E_std = process_SDP_dataset(data, num_of_shot)\n",
     "name = 'data_N' + str(N) + '_threshold' + str(threshold)\n",
     "filename = '%s.npy' % name\n",
-    "#np.save(filename, data)"
+    "np.save(filename, data)"
    ]
   },
   {
