--- a/More-Qubit Pro v3.0/main.ipynb
+++ b/More-Qubit Pro v3.0/main.ipynb
@@ -23,6 +23,7 @@
    "outputs": [],
    "source": [
     "import argparse\n",
+    "import time\n",
     "import random\n",
     "import numpy as np\n",
     "import cvxpy as cp\n",
@@ -204,8 +205,13 @@
     "\n",
     "    meas_outcome = parity_check(output)\n",
     "    N_meas_sub = len(output)\n",
-    "    expectation_value = np.average(meas_outcome)\n",
-    "    variance = np.var(meas_outcome)\n",
+    "    \n",
+    "    if N_meas_sub == 0:\n",
+    "        expectation_value = 0\n",
+    "        variance = 0\n",
+    "    else: \n",
+    "        expectation_value = np.average(meas_outcome)\n",
+    "        variance = np.var(meas_outcome)\n",
     "\n",
     "    return expectation_value, variance\n",
     "def num_meas_sub_calculator(measurement_dataset, pauli_basis_str):\n",
@@ -247,9 +253,10 @@
     "    density_matrix = 0\n",
     "    for basis in generate_sub_PauliStrList(PauliStrList, qubit_index):\n",
     "        expectation, variance = exp_var_calculator(measurement_dataset, basis)\n",
-    "        density_matrix += expectation * pauliToMatrix(basis)\n",
-    "    density_matrix += tensor([qeye(2)] * N)\n",
-    "    return 1 / (2 ** N) * density_matrix.ptrace(qubit_index)\n",
+    "        sub_basis = ''.join([basis[i] for i in qubit_index])\n",
+    "        density_matrix += expectation * pauliToMatrix(sub_basis)\n",
+    "    density_matrix += tensor([qeye(2)] * len(qubit_index))\n",
+    "    return 1 / (2 ** len(qubit_index)) * density_matrix\n",
     "def q_tomography_vec(qubit_index, measurement_dataset):\n",
     "    ''' Do quantum tomography for certain qubits according to the index,\n",
     "        output a list of expectation value.\n",
@@ -292,6 +299,26 @@
     "        num_meas_sub = num_meas_sub_calculator(measurement_dataset, basis_list[i])\n",
     "        sigma.append(2 * coef * z * ((p_vec[i] * (1 - p_vec[i]) / num_meas_sub) ** 0.5))\n",
     "\n",
+    "    return sigma\n",
+    "def Wilson_interval_bisection(coef, qubit_index, confidence_level, measurement_dataset, N):\n",
+    "    ''' Given a qubit index (in order of 01234...),\n",
+    "        return the corresponding Wilson_interval for each expectation value.\n",
+    "        But here \"bisection\" means we add an additional coefficient,\n",
+    "        so that we can use bisection method to find the solution of the SDP within a certain domain defined by a threshold\n",
+    "    '''\n",
+    "    error_rate = 1 - confidence_level\n",
+    "    z = norm.ppf(1 - error_rate / 2)  # Quantile of the input confidence level for binomial distribution\n",
+    "\n",
+    "    mean_vec = np.array(q_tomography_vec(qubit_index, measurement_dataset))\n",
+    "    p_vec = 0.5 * (1 + mean_vec)\n",
+    "\n",
+    "    basis_list = generate_sub_PauliStrList(PauliStrList, qubit_index)\n",
+    "    sigma = []\n",
+    "    for i in range(len(basis_list)):\n",
+    "        num_meas_sub = num_meas_sub_calculator(measurement_dataset, basis_list[i])\n",
+    "        sigma.append(2*coef*z/(1+z*z/num_meas_sub)*math.sqrt((p_vec[i]*(1-p_vec[i]) + z*z/(4*num_meas_sub)) / num_meas_sub))\n",
+    "    \n",
+    "    sigma = np.nan_to_num(sigma, nan=1)\n",
     "    return sigma\n",
     "def Bloch_vec(qiskit_state, qubit_index):\n",
     "    ''' Given a qiskit quantum state and the qubit index,\n",
@@ -414,7 +441,7 @@
     "    sigma = np.zeros((K, P))\n",
     "    for i in range(K):\n",
     "        index = list(range(i, i + M, 1))  # [i, i+1, ...]\n",
-    "        sigma[i] = Wald_interval_bisection(coef, index, 0.95, measurement_dataset, N)\n",
+    "        sigma[i] = Wilson_interval_bisection(coef, index, 0.95, measurement_dataset, N)\n",
     "    constraints += [ep >= -sigma, ep <= sigma]\n",
     "\n",
     "    return constraints\n",
@@ -429,7 +456,7 @@
     "    sigma = np.zeros((K, P))\n",
     "    for i in range(K):\n",
     "        index = list(range(i, i + M, 1))  # [i, i+1, ...]\n",
-    "        sigma[i] = Wald_interval_bisection(coef, index, 0.95, measurement_dataset, N)\n",
+    "        sigma[i] = Wilson_interval_bisection(coef, index, 0.95, measurement_dataset, N)\n",
     "    constraints += [ep >= -sigma, ep <= sigma]\n",
     "\n",
     "    return constraints\n",
@@ -527,7 +554,7 @@
     "    sigma = np.zeros((K_3body, P_3body))\n",
     "    for i in range(K_3body):\n",
     "        index = list(range(i, i+G, 1))  # [i, i+1, ...]\n",
-    "        sigma[i] = Wald_interval_bisection(coef, index, 0.95, measurement_dataset, N)\n",
+    "        sigma[i] = Wilson_interval_bisection(coef, index, 0.95, measurement_dataset, N)\n",
     "    constraints_C2 += [ep_C2 >= -sigma, ep_C2 <= sigma]\n",
     "\n",
     "    return constraints_C2\n",
@@ -772,7 +799,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "N = 3 # Number of qubits of the entire system\n",
+    "N = 4 # Number of qubits of the entire system\n",
     "M = 2 # Number of qubits of subsystems\n",
     "G = 3 # Number of qubits of partial global system (C1)\n",
     "K = N-M+1 # Number of subsystems\n",
@@ -789,10 +816,11 @@
     "\n",
     "ground_state_energy, ground_state_dm = ground_state(H_global)\n",
     "q_state = DensityMatrix(ground_state_dm)\n",
-    "N_meas_list = N_meas_list_func(1000, 500000, 20)\n",
+    "N_meas_list = N_meas_list_func(100, 10000, 5)\n",
     "threshold = 0.2\n",
-    "num_of_shot = 100\n",
+    "num_of_shot = 4\n",
     "\n",
+    "start_time = time.time()\n",
     "data = get_SDP_dataset(num_of_shot=num_of_shot,\n",
     "                       N_meas_list=N_meas_list,\n",
     "                       threshold=threshold,\n",
@@ -800,6 +828,10 @@
     "                       M=M,\n",
     "                       K=K,\n",
     "                       P=P)\n",
+    "end_time = time.time()\n",
+    "total_time = end_time - start_time\n",
+    "print(\"Total time:\", total_time, \"seconds\")\n",
+    "\n",
     "E_mean, E_std = process_SDP_dataset(data, num_of_shot)\n",
     "name = 'data_N' + str(N) + '_threshold' + str(threshold)\n",
     "filename = '%s.npy' % name\n",
@@ -817,19 +849,21 @@
     "\n",
     "plt.figure(1)\n",
     "plt.figure(dpi=400)\n",
-    "plt.axhline(y = ground_state_energy, color='#FF3030', linestyle='-', linewidth=1.5, label='Theoretical GS energy')\n",
+    "plt.axhline(y = ground_state_energy, color='#E94560', linestyle='-', linewidth=1.5, label='Theoretical GS energy')\n",
     "\n",
-    "type_of_constraints = ['E_min', 'E_max', 'E_min_C0', 'E_max_C0', 'E_min_C01', 'E_max_C01', 'E_min_C02', 'E_max_C02']\n",
-    "color_code_list = ['#483D8B', '#483D8B', '#6E8B3D', '#6E8B3D', '#1874CD', '#1874CD', '#FFC125', '#FFC125']\n",
+    "#type_of_constraints = ['E_min', 'E_max', 'E_min_C0', 'E_max_C0', 'E_min_C01', 'E_max_C01', 'E_min_C02', 'E_max_C02']\n",
+    "#color_code_list = ['#483D8B', '#483D8B', '#6E8B3D', '#6E8B3D', '#1874CD', '#1874CD', '#FFC125', '#FFC125']\n",
+    "type_of_constraints = ['E_min', 'E_max', 'E_min_C0', 'E_max_C0', 'E_min_C01', 'E_max_C01']\n",
+    "color_code_list = ['#4c72b0', '#4c72b0', '#dd8452', '#dd8452', '#55a868', '#55a868']\n",
     "\n",
-    "plt.plot(N_meas_list, E_mean['E_min'], color='#483D8B', linewidth=1, label='Statistical GS energy 99%')\n",
-    "plt.plot(N_meas_list, E_mean['E_max'], color='#483D8B', linewidth=1)\n",
-    "plt.plot(N_meas_list, E_mean['E_min_C0'], color='#6E8B3D', linewidth=1, label='C0')\n",
-    "plt.plot(N_meas_list, E_mean['E_max_C0'], color='#6E8B3D', linewidth=1)\n",
-    "plt.plot(N_meas_list, E_mean['E_min_C01'], color='#1874CD', linewidth=1, label='C01')\n",
-    "plt.plot(N_meas_list, E_mean['E_max_C01'], color='#1874CD', linewidth=1)\n",
-    "plt.plot(N_meas_list, E_mean['E_min_C02'], color='#FFC125', linestyle=':', linewidth=1, label='C02')\n",
-    "plt.plot(N_meas_list, E_mean['E_max_C02'], color='#FFC125', linestyle=':', linewidth=1)\n",
+    "plt.plot(N_meas_list, E_mean['E_min'], color='#4c72b0', linewidth=1, label='Statistical GS energy 99%')\n",
+    "plt.plot(N_meas_list, E_mean['E_max'], color='#4c72b0', linewidth=1)\n",
+    "plt.plot(N_meas_list, E_mean['E_min_C0'], color='#dd8452', linewidth=1, label='Physical compatible')\n",
+    "plt.plot(N_meas_list, E_mean['E_max_C0'], color='#dd8452', linewidth=1)\n",
+    "plt.plot(N_meas_list, E_mean['E_min_C01'], color='#55a868', linewidth=1, label='Three-body global verifycation')\n",
+    "plt.plot(N_meas_list, E_mean['E_max_C01'], color='#55a868', linewidth=1)\n",
+    "#plt.plot(N_meas_list, E_mean['E_min_C02'], color='#FFC125', linestyle=':', linewidth=1, label='C02')\n",
+    "#plt.plot(N_meas_list, E_mean['E_max_C02'], color='#FFC125', linestyle=':', linewidth=1)\n",
     "\n",
     "for key in type_of_constraints:\n",
     "    i = type_of_constraints.index(key)\n",
@@ -842,6 +876,20 @@
     "figurename = '%s.pdf' % name\n",
     "plt.savefig(figurename)\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate a color palette\n",
+    "palette = sns.color_palette()\n",
+    "\n",
+    "# Get the color codes of the first five colors in the palette\n",
+    "colors_hex = palette.as_hex()[:5]\n",
+    "colors_hex"
    ]
   }
  ],
