--- a/More-Qubit Pro v3.0/complexity_plot.ipynb
+++ b/More-Qubit Pro v3.0/complexity_plot.ipynb
@@ -930,43 +930,112 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "N = 3 # Number of qubits of the entire system\n",
+    "N_max = 12\n",
     "M = 2 # Number of qubits of subsystems\n",
     "G = 3 # Number of qubits of partial global system (C1)\n",
-    "K = N-M+1 # Number of subsystems\n",
-    "P = 4**M-1 # Number of Pauli basis for each subsystem\n",
+    "N_meas = 2000\n",
+    "num_shots = 80 # Number of shots needed to average the cost of time for each N\n",
     "\n",
-    "PauliStrList = generate_PauliStrList(N)[1:]\n",
-    "PauliStrList_part = generate_PauliStrList(M)[1:]\n",
-    "PauliStrList_Gbody = generate_PauliStrList(G)[1:]\n",
+    "time_cost_C01 = []\n",
+    "time_std_C01 = []\n",
+    "time_cost_C0 = []\n",
+    "time_std_C0 = []\n",
     "\n",
-    "H_local_list = ['XX','YY']\n",
-    "H_global_list = Hamiltonian_global(H_local_list, N, M, K)\n",
-    "H_local = np.array( Hamiltonian_matrix(H_local_list) ) # The local Hamiltonian of subsystems\n",
-    "H_global = np.array( Hamiltonian_matrix(H_global_list) ) # The global Hamiltonian of interest\n",
+    "for N in list(range(G, N_max+1)):\n",
+    "    K = N-M+1 # Number of subsystems\n",
+    "    P = 4**M-1 # Number of Pauli basis for each subsystem\n",
     "\n",
-    "ground_state_energy, ground_state_dm = ground_state(H_global)\n",
-    "q_state = DensityMatrix(ground_state_dm)\n",
-    "N_meas_list = N_meas_list_func(100, 100000, 20)\n",
-    "threshold = 0.2\n",
-    "num_of_shot = 100\n",
+    "    PauliStrList = generate_PauliStrList(N)[1:]\n",
+    "    PauliStrList_part = generate_PauliStrList(M)[1:]\n",
+    "    PauliStrList_Gbody = generate_PauliStrList(G)[1:]\n",
     "\n",
-    "start_time = time.time()\n",
-    "data = get_SDP_dataset(num_of_shot=num_of_shot,\n",
-    "                       N_meas_list=N_meas_list,\n",
-    "                       threshold=threshold,\n",
-    "                       N=N,\n",
-    "                       M=M,\n",
-    "                       K=K,\n",
-    "                       P=P)\n",
-    "end_time = time.time()\n",
-    "total_time = end_time - start_time\n",
-    "print(\"Total time:\", total_time, \"seconds\")\n",
+    "    H_local_list = ['XX','YY']\n",
+    "    H_global_list = Hamiltonian_global(H_local_list, N, M, K)\n",
+    "    H_local = np.array( Hamiltonian_matrix(H_local_list) ) # The local Hamiltonian of subsystems\n",
+    "    H_global = np.array( Hamiltonian_matrix(H_global_list) ) # The global Hamiltonian of interest\n",
     "\n",
-    "E_mean, E_std = process_SDP_dataset(data, num_of_shot)\n",
-    "name = 'data_N' + str(N) + '_threshold' + str(threshold)\n",
+    "    ground_state_energy, ground_state_dm = ground_state(H_global)\n",
+    "    q_state = DensityMatrix(ground_state_dm)\n",
+    "\n",
+    "    tmp_C0 = []\n",
+    "    tmp_C01 = []\n",
+    "    for i in range(num_shots):\n",
+    "        measurement_dataset = generate_meas_dataset(q_state, N_meas, N)\n",
+    "        measurement_dataset = {key: value for key, value in measurement_dataset.items() if value} # For reducing the complexity\n",
+    "\n",
+    "        # Monitering the time SDP solver costs (C0)\n",
+    "        start_time0 = time.time()\n",
+    "        energy_C0_min, coef_min = time_cost_min_C0(H_local, measurement_dataset, N, M, K, P)\n",
+    "        energy_C0_max, coef_max = time_cost_max_C0(H_local, measurement_dataset, N, M, K, P)\n",
+    "        end_time0 = time.time() - start_time0\n",
+    "        tmp_C0.append(end_time0)\n",
+    "\n",
+    "        # Monitering the time SDP solver costs (C01)\n",
+    "        start_time1 = time.time()\n",
+    "        energy_C1_min, coef_min = time_cost_min_C01(H_local, measurement_dataset, N, M, K, P)\n",
+    "        energy_C1_max, coef_max = time_cost_max_C01(H_local, measurement_dataset, N, M, K, P)\n",
+    "        end_time1 = time.time() - start_time1\n",
+    "        tmp_C01.append(end_time1)\n",
+    "\n",
+    "    time_cost_C0.append(np.mean(tmp_C0))\n",
+    "    time_std_C0.append(np.std(tmp_C0)/num_shots ** 0.5)\n",
+    "    print(\"N=\", N, \":\", np.mean(tmp_C0) , \"seconds\")\n",
+    "    \n",
+    "    time_cost_C01.append(np.mean(tmp_C01))\n",
+    "    time_std_C01.append(np.std(tmp_C01)/num_shots ** 0.5)\n",
+    "    print(\"N=\", N, \":\", np.mean(tmp_C01) , \"seconds\")\n",
+    "\n",
+    "time_cost_C01 = np.array(time_cost_C01)\n",
+    "time_std_C01 = np.array(time_std_C01)\n",
+    "time_cost_C0 = np.array(time_cost_C0)\n",
+    "time_std_C0 = np.array(time_std_C0)\n",
+    "\n",
+    "# Save data\n",
+    "data = {}\n",
+    "data['time_cost_C01'] = time_cost_C01\n",
+    "data['time_std_C01'] = time_std_C01\n",
+    "data['time_cost_C0'] = time_cost_C0\n",
+    "data['time_std_C0'] = time_std_C0\n",
+    "\n",
+    "name = 'data_complexity'\n",
     "filename = '%s.npy' % name\n",
     "np.save(filename, data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import data\n",
+    "data = np.load(filename, allow_pickle=True)\n",
+    "data = data.item()\n",
+    "time_cost_C01 = data['time_cost_C01']\n",
+    "time_std_C01 = data['time_std_C01']\n",
+    "time_cost_C0 = data['time_cost_C0']\n",
+    "time_std_C0 = data['time_std_C0']\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib.ticker import MaxNLocator\n",
+    "\n",
+    "plt.figure(figsize=(8, 5))\n",
+    "plt.figure(dpi=400)\n",
+    "plt.errorbar(list(range(G, N_max+1)), time_cost_C0, color='blue', yerr=2.58*time_std_C0, ecolor='pink', fmt='o', capsize=3, ms=3, label='Physical compatibility')\n",
+    "plt.errorbar(list(range(G, N_max+1)), time_cost_C01, color='purple', yerr=2.58*time_std_C01, ecolor='pink', fmt='o', capsize=3, ms=3, label='Three-body global verification')\n",
+    "\n",
+    "# Set the x-axis to display only integer values\n",
+    "ax = plt.gca()\n",
+    "ax.xaxis.set_major_locator(MaxNLocator(integer=True))\n",
+    "\n",
+    "plt.xlabel('Number of qubits')\n",
+    "plt.ylabel('Time cost by SDP solver (s)')\n",
+    "plt.yscale('log')\n",
+    "plt.legend()\n",
+    "plt.grid(True, which=\"both\", ls=\"-\")\n",
+    "figurename = '%s.pdf' % 'complexity'\n",
+    "plt.savefig(figurename)\n",
+    "plt.show()"
    ]
   }
  ],
