--- a/More-Qubit Pro v3.0/plot.ipynb
+++ b/More-Qubit Pro v3.0/plot.ipynb
@@ -810,118 +810,7 @@
     "        tmp = np.array(data[key])\n",
     "        E_mean[key] = np.mean(tmp, axis=0)\n",
     "        E_std[key] = np.std(tmp, axis=0) / num_of_shot ** 0.5\n",
-    "    return E_mean, E_std\n",
-    "\n",
-    "# Moniter the time complexity with fixed G as N increases\n",
-    "import time\n",
-    "def time_cost_min_C01(H, measurement_dataset, N, M, K, P):\n",
-    "    '''Solve the SDP using bi-section method\n",
-    "    '''\n",
-    "    ep = cp.Variable((K, P))\n",
-    "    ep_C1 = cp.Variable((N-G+1, 4**G-1))\n",
-    "    ep_C2 = cp.Variable((N-G+1, 4**G-1))\n",
-    "    coef = 1\n",
-    "\n",
-    "    # Solve SDP with conditions C1+C0\n",
-    "    dm_tilde01, dm_hat01 = SDP_variables_C0(ep, measurement_dataset, N, M, K, P)\n",
-    "    dm_tilde_C1 = SDP_variables_C1(ep_C1, measurement_dataset, N, G)\n",
-    "    constraints0 = constraints_C0(ep, coef, dm_tilde01, measurement_dataset, N, M, K, P)\n",
-    "    constraints1 = constraints_C1(ep_C1, coef, dm_tilde01, dm_tilde_C1, measurement_dataset, N, M, G)\n",
-    "    \n",
-    "    H_exp01 = 0\n",
-    "    for i in range(K):\n",
-    "        H_exp01 = H_exp01 + H @ dm_tilde01[i]\n",
-    "    prob_C1 = cp.Problem(\n",
-    "        cp.Minimize(\n",
-    "            cp.real(\n",
-    "                cp.trace(\n",
-    "                    H_exp01\n",
-    "                )\n",
-    "            )\n",
-    "        ), constraints0 + constraints1\n",
-    "    )\n",
-    "    energy_C1 = prob_C1.solve(solver=cp.SCS, verbose=False)\n",
-    "\n",
-    "    return energy_C1, coef\n",
-    "def time_cost_max_C01(H, measurement_dataset, N, M, K, P):\n",
-    "    '''Solve the SDP using bi-section method\n",
-    "    '''\n",
-    "    ep = cp.Variable((K, P))\n",
-    "    ep_C1 = cp.Variable((N-G+1, 4**G-1))\n",
-    "    ep_C2 = cp.Variable((N-G+1, 4**G-1))\n",
-    "    coef = 1\n",
-    "\n",
-    "    # Solve SDP with conditions C1+C0\n",
-    "    dm_tilde01, dm_hat01 = SDP_variables_C0(ep, measurement_dataset, N, M, K, P)\n",
-    "    dm_tilde_C1 = SDP_variables_C1(ep_C1, measurement_dataset, N, G)\n",
-    "    constraints0 = constraints_C0(ep, coef, dm_tilde01, measurement_dataset, N, M, K, P)\n",
-    "    constraints1 = constraints_C1(ep_C1, coef, dm_tilde01, dm_tilde_C1, measurement_dataset, N, M, G)\n",
-    "    \n",
-    "    H_exp01 = 0\n",
-    "    for i in range(K):\n",
-    "        H_exp01 = H_exp01 + H @ dm_tilde01[i]\n",
-    "    prob_C1 = cp.Problem(\n",
-    "        cp.Maximize(\n",
-    "            cp.real(\n",
-    "                cp.trace(\n",
-    "                    H_exp01\n",
-    "                )\n",
-    "            )\n",
-    "        ), constraints0 + constraints1\n",
-    "    )\n",
-    "    energy_C1 = prob_C1.solve(solver=cp.SCS, verbose=False)\n",
-    "\n",
-    "    return energy_C1, coef\n",
-    "def time_cost_min_C0(H, measurement_dataset, N, M, K, P):\n",
-    "    '''Solve the SDP using bi-section method\n",
-    "    '''\n",
-    "    ep = cp.Variable((K, P))\n",
-    "    coef = 1\n",
-    "\n",
-    "    # Solve SDP with conditions C0\n",
-    "    dm_tilde0, dm_hat0 = SDP_variables_C0(ep, measurement_dataset, N, M, K, P)\n",
-    "    constraints0 = constraints_C0(ep, coef, dm_tilde0, measurement_dataset, N, M, K, P)\n",
-    "    \n",
-    "    H_exp0 = 0\n",
-    "    for i in range(K):\n",
-    "        H_exp0 = H_exp0 + H @ dm_tilde0[i]\n",
-    "    prob_C0 = cp.Problem(\n",
-    "        cp.Minimize(\n",
-    "            cp.real(\n",
-    "                cp.trace(\n",
-    "                    H_exp0\n",
-    "                )\n",
-    "            )\n",
-    "        ), constraints0\n",
-    "    )\n",
-    "    energy_C0 = prob_C0.solve(solver=cp.SCS, verbose=False)\n",
-    "\n",
-    "    return energy_C0, coef\n",
-    "def time_cost_max_C0(H, measurement_dataset, N, M, K, P):\n",
-    "    '''Solve the SDP using bi-section method\n",
-    "    '''\n",
-    "    ep = cp.Variable((K, P))\n",
-    "    coef = 1\n",
-    "\n",
-    "    # Solve SDP with conditions C0\n",
-    "    dm_tilde0, dm_hat0 = SDP_variables_C0(ep, measurement_dataset, N, M, K, P)\n",
-    "    constraints0 = constraints_C0(ep, coef, dm_tilde0, measurement_dataset, N, M, K, P)\n",
-    "    \n",
-    "    H_exp0 = 0\n",
-    "    for i in range(K):\n",
-    "        H_exp0 = H_exp0 + H @ dm_tilde0[i]\n",
-    "    prob_C0 = cp.Problem(\n",
-    "        cp.Maximize(\n",
-    "            cp.real(\n",
-    "                cp.trace(\n",
-    "                    H_exp0\n",
-    "                )\n",
-    "            )\n",
-    "        ), constraints0\n",
-    "    )\n",
-    "    energy_C0 = prob_C0.solve(solver=cp.SCS, verbose=False)\n",
-    "\n",
-    "    return energy_C0, coef"
+    "    return E_mean, E_std"
    ]
   },
   {
@@ -947,26 +836,48 @@
     "\n",
     "ground_state_energy, ground_state_dm = ground_state(H_global)\n",
     "q_state = DensityMatrix(ground_state_dm)\n",
-    "N_meas_list = N_meas_list_func(100, 100000, 20)\n",
+    "N_meas_list = N_meas_list_func(100, 1000, 2)\n",
     "threshold = 0.2\n",
-    "num_of_shot = 100\n",
+    "num_of_shot = 10\n",
     "\n",
-    "start_time = time.time()\n",
-    "data = get_SDP_dataset(num_of_shot=num_of_shot,\n",
-    "                       N_meas_list=N_meas_list,\n",
-    "                       threshold=threshold,\n",
-    "                       N=N,\n",
-    "                       M=M,\n",
-    "                       K=K,\n",
-    "                       P=P)\n",
-    "end_time = time.time()\n",
-    "total_time = end_time - start_time\n",
-    "print(\"Total time:\", total_time, \"seconds\")\n",
+    "filename = 'data_N3_threshold0.2'\n",
+    "data = np.load(filename+'.npy', allow_pickle=True)\n",
+    "data = data.item()\n",
+    "E_mean, E_std = process_SDP_dataset(data, num_of_shot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(8, 5))\n",
+    "plt.figure(dpi=400)\n",
+    "plt.axhline(y = ground_state_energy, color='#E94560', linestyle='-', linewidth=1.5, label='Theoretical GS energy')\n",
     "\n",
-    "E_mean, E_std = process_SDP_dataset(data, num_of_shot)\n",
-    "name = 'data_N' + str(N) + '_threshold' + str(threshold)\n",
-    "filename = '%s.npy' % name\n",
-    "np.save(filename, data)"
+    "type_of_constraints = ['E_min', 'E_max', 'E_min_C0', 'E_max_C0', 'E_min_C01', 'E_max_C01']\n",
+    "color_code_list = ['#4c72b0', '#4c72b0', '#dd8452', '#dd8452', '#55a868', '#55a868']\n",
+    "\n",
+    "plt.plot(N_meas_list, E_mean['E_min'], color='#4c72b0', linewidth=1, marker='s', markersize=2, label='Statistical GS energy (99%)')\n",
+    "plt.plot(N_meas_list, E_mean['E_max'], color='#4c72b0', linewidth=1, marker='s', markersize=2)\n",
+    "plt.plot(N_meas_list, E_mean['E_min_C0'], color='#dd8452', linewidth=1, marker='^', markersize=2, label='Physical compatibility')\n",
+    "plt.plot(N_meas_list, E_mean['E_max_C0'], color='#dd8452', linewidth=1, marker='^', markersize=2)\n",
+    "plt.plot(N_meas_list, E_mean['E_min_C01'], color='#55a868', linewidth=1, marker='o', markersize=2, label='Three-body global verification')\n",
+    "plt.plot(N_meas_list, E_mean['E_max_C01'], color='#55a868', linewidth=1, marker='o', markersize=2)\n",
+    "\n",
+    "for key in type_of_constraints:\n",
+    "    i = type_of_constraints.index(key)\n",
+    "    plt.fill_between(N_meas_list, E_mean[key]-2.58*E_std[key], E_mean[key]+2.58*E_std[key], facecolor=color_code_list[i], alpha=0.3)\n",
+    "\n",
+    "plt.xscale('log')\n",
+    "plt.xlabel('Number of measurements')\n",
+    "plt.ylabel('Expectation value')\n",
+    "plt.legend()\n",
+    "plt.grid(True, which=\"major\", ls=\"-\")\n",
+    "figurename = '%s.pdf' % filename\n",
+    "plt.savefig(figurename)\n",
+    "plt.show()\n"
    ]
   }
  ],
