Create a python file for generating measurement dataset

--- a/More-Qubit Pro v3.0/main.ipynb
+++ b/More-Qubit Pro v3.0/main.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1074,7 +1074,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "N = 4 # Number of qubits of the entire system\n",
+    "N = 5 # Number of qubits of the entire system\n",
     "M = 2 # Number of qubits of subsystems\n",
     "G = 3 # Number of qubits of partial global system (C1)\n",
     "K = N-M+1 # Number of subsystems\n",
@@ -1093,13 +1093,13 @@
     "q_state = DensityMatrix(ground_state_dm) \n",
     "lower_bound = lower_bound_with_SDP(H_local, N, M, K, P)\n",
     "\n",
-    "num_data_point = 15 # number of N_meas that we select to run\n",
-    "N_meas_list = N_meas_list_func(100, 100000, num_data_point) # A list of number of measurement performed in all basis\n",
-    "num_of_shot = 100 # Number of repeatation of the experiment\n",
+    "num_data_point = 8 # number of N_meas that we select to run\n",
+    "N_meas_list = N_meas_list_func(100, 10000, num_data_point) # A list of number of measurement performed in all basis\n",
+    "num_of_shot = 50 # Number of repeatation of the experiment\n",
     "\n",
-    "higher_bound = 0.2 # Starting trial value for the bi-search method\n",
+    "higher_bound = 0.05 # Starting trial value for the bi-search method\n",
     "higher_bound_gs = [0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8] # Trial value for lower bounding the ground state energy\n",
-    "threshold = 0.01 # Accuracy of the minimum relaxation value \n",
+    "threshold = 0.001 # Accuracy of the minimum relaxation value \n",
     "data, coef_data = get_SDP_dataset(num_of_shot=num_of_shot,\n",
     "                       N_meas_list=N_meas_list,\n",
     "                       higher_bound=higher_bound,\n",
@@ -1111,9 +1111,169 @@
     "                       P=P)\n",
     "\n",
     "E_mean, E_std = process_SDP_dataset(data, num_of_shot, num_data_point, higher_bound_gs)\n",
-    "name = 'data_N' + str(N) + '_threshold' + str(threshold)\n",
+    "name = 'data_N' + str(N) + '_threshold' + str(threshold) + 'test'\n",
     "filename = '%s.npy' % name\n",
     "np.save(filename, data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "only size-1 arrays can be converted to Python scalars",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/wangzherui/Documents/GitHub/SDP-for-VQE/More-Qubit Pro v3.0/main.ipynb 单元格 4\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/wangzherui/Documents/GitHub/SDP-for-VQE/More-Qubit%20Pro%20v3.0/main.ipynb#W3sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mint\u001b[39;49m(random_distribute(N_meas\u001b[39m=\u001b[39;49m\u001b[39m50\u001b[39;49m, N\u001b[39m=\u001b[39;49m\u001b[39m3\u001b[39;49m))\n",
+      "\u001b[0;31mTypeError\u001b[0m: only size-1 arrays can be converted to Python scalars"
+     ]
+    }
+   ],
+   "source": [
+    "random_distribute(N_meas=50, N=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "\n",
+    "# Your original dictionary\n",
+    "original_dict = generate_meas_dataset(q_state, N_meas=100, N=3)\n",
+    "\n",
+    "# List that specifies how many strings to select for each key\n",
+    "num_meas_list = random_distribute(N_meas=50, N=3)  # Replace ... with the rest of the values\n",
+    "\n",
+    "# Create the new dictionary to store the selected strings\n",
+    "selected_dict = {}\n",
+    "\n",
+    "# Iterate over the keys and their corresponding index in the original dictionary\n",
+    "for i, key in enumerate(original_dict):\n",
+    "    # Randomly select strings from the list for this key\n",
+    "    selected_strings = random.sample(original_dict[key], int(num_meas_list[i]))\n",
+    "    \n",
+    "    # Add the selected strings to the new dictionary\n",
+    "    selected_dict[key] = selected_strings\n",
+    "\n",
+    "# Now selected_dict contains the randomly selected strings for each key\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ZZZ': ['001', '010'],\n",
+       " 'ZZX': ['010', '100'],\n",
+       " 'ZZY': ['011', '001'],\n",
+       " 'ZXZ': ['010'],\n",
+       " 'ZXX': ['010', '001'],\n",
+       " 'ZXY': ['000', '001'],\n",
+       " 'ZYZ': ['010', '010'],\n",
+       " 'ZYX': ['101'],\n",
+       " 'ZYY': ['111', '111'],\n",
+       " 'XZZ': ['110', '110'],\n",
+       " 'XZX': ['101', '000'],\n",
+       " 'XZY': ['000', '101'],\n",
+       " 'XXZ': ['100'],\n",
+       " 'XXX': ['101', '010'],\n",
+       " 'XXY': ['011', '010'],\n",
+       " 'XYZ': ['010', '100'],\n",
+       " 'XYX': ['010', '111'],\n",
+       " 'XYY': ['001', '010'],\n",
+       " 'YZZ': ['010'],\n",
+       " 'YZX': ['111', '010'],\n",
+       " 'YZY': ['000', '101'],\n",
+       " 'YXZ': ['101', '001'],\n",
+       " 'YXX': ['111', '101'],\n",
+       " 'YXY': ['100', '100'],\n",
+       " 'YYZ': ['100', '100'],\n",
+       " 'YYX': ['101', '101'],\n",
+       " 'YYY': ['010', '010']}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "selected_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ZZZ': ['001', '001', '010'],\n",
+       " 'ZZX': ['010', '001', '001', '100'],\n",
+       " 'ZZY': ['100', '010', '011'],\n",
+       " 'ZXZ': ['100', '011', '110', '010'],\n",
+       " 'ZXX': ['010', '001', '110', '001'],\n",
+       " 'ZXY': ['011', '011', '100', '010'],\n",
+       " 'ZYZ': ['001', '000', '100', '110'],\n",
+       " 'ZYX': ['100', '101', '000', '101'],\n",
+       " 'ZYY': ['001', '010', '010', '001'],\n",
+       " 'XZZ': ['110', '110', '000', '100'],\n",
+       " 'XZX': ['010', '111', '000', '110'],\n",
+       " 'XZY': ['110', '010', '111', '011'],\n",
+       " 'XXZ': ['010', '010', '101', '111'],\n",
+       " 'XXX': ['101', '011', '110'],\n",
+       " 'XXY': ['010', '111', '011', '010'],\n",
+       " 'XYZ': ['000', '111', '010', '011'],\n",
+       " 'XYX': ['111', '101', '111'],\n",
+       " 'XYY': ['110', '001', '011'],\n",
+       " 'YZZ': ['000', '010', '010', '110'],\n",
+       " 'YZX': ['110', '010', '000', '101'],\n",
+       " 'YZY': ['000', '111', '101'],\n",
+       " 'YXZ': ['110', '110', '000', '111'],\n",
+       " 'YXX': ['110', '001', '110'],\n",
+       " 'YXY': ['001', '111', '000', '101'],\n",
+       " 'YYZ': ['100', '100', '100', '101'],\n",
+       " 'YYX': ['100', '100', '111', '100'],\n",
+       " 'YYY': ['010', '101', '001']}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "N = 3 # Number of qubits of the entire system\n",
+    "M = 2 # Number of qubits of subsystems\n",
+    "G = 3 # Number of qubits of partial global system (C1)\n",
+    "K = N-M+1 # Number of subsystems\n",
+    "P = 4**M-1 # Number of Pauli basis for each subsystem\n",
+    "\n",
+    "PauliStrList = generate_PauliStrList(N)[1:]\n",
+    "PauliStrList_part = generate_PauliStrList(M)[1:]\n",
+    "PauliStrList_Gbody = generate_PauliStrList(G)[1:]\n",
+    "\n",
+    "H_local_list = ['XX','YY'] # Pauli string representation of the local Hamiltonian of subsystems\n",
+    "H_global_list = Hamiltonian_global(H_local_list, N, M, K) # Pauli string representation of the Hamiltonian of the whole system\n",
+    "H_local = np.array( Hamiltonian_matrix(H_local_list) ) # Matrix representation of the local Hamiltonian of subsystems\n",
+    "H_global = np.array( Hamiltonian_matrix(H_global_list) ) # Matrix representation of the Hamiltonian of the whole system\n",
+    "\n",
+    "ground_state_energy, ground_state_dm = ground_state(H_global) \n",
+    "q_state = DensityMatrix(ground_state_dm) \n",
+    "lower_bound = lower_bound_with_SDP(H_local, N, M, K, P)\n",
+    "\n",
+    "generate_meas_dataset(q_state, N_meas=100, N=3)"
    ]
   }
  ],
